--- a/index.html
+++ b/index.html
@@ -43,5 +43,11 @@
   </a>
 </div>
 
+<a href="pages/propos.html">
+<div id="dialogue-box">
+    Si tu veux en savoir plus sur moi, clique sur cette bulle.
+  </div>
+</a>
+
 </body>
 </html>
