--- a/pages/cv.html
+++ b/pages/cv.html
@@ -10,5 +10,10 @@
 <body>
     <h1>Déroule pour voir mon CV !</h1>
     <img src="../images/cv.png" alt="Mon CV" style="width:100%; max-width:800px; display:block; margin: 20px auto;">
+    
+    <a href="../index.html" id="character">
+    <img src="../images/icone.webp" alt="Guide">
+</a>
+
 </body>
 </html>
