--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </a>
 </div>
 
-<a href="pages/propos.html">
+<a href="pages/propos.html" text-decoration="none" style="display:block; text-align:center; margin-top:20px; color:black; font-weight:600;">
 <div id="dialogue-box">
     Si tu veux en savoir plus sur moi, clique sur cette bulle.
   </div>
