--- a/pages/creations.html
+++ b/pages/creations.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Portfolio - Maëlys Barreteau</title>
+<title>MES COMPETENCES</title>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="pages.css">
 </head>
@@ -10,10 +10,56 @@
 
 <h1>Mes créations</h1>
 <div id="dialogue-box">
-    Voici quelques-unes de mes créations ! Pensez bien à cliquer sur les icônes pour en savoir plus.
+    Voici quelques-unes de mes créations ! Passez votre souris sur les cartes pour découvrir certains de mes projets.
   </div>
 
-  
+  <div class="cards-container">
+  <div class="card">
+    <div class="card-inner">
+      <div class="card-front">
+        Projet 1
+      </div>
+      <div class="card-back">
+        <h3>16 MESURES FESTIVAL</h3>
+        <p>16 mesures festival est un projet scolaire où en groupe de trois nous avons créé un site internet via Wordpress. Nous avons inventé un festival principalement orienté sur la musique rap qui se passerait à Moulins-Sur-Alliers.</p>
+        <a href="https://16mesuresfestival.wordpress.com/">Voir le projet</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-inner">
+      <div class="card-front">
+        Projet 2
+      </div>
+      <div class="card-back">
+        <h3>MUSIQUE AU FEM'</h3>
+        <p>Musique au féminin (projet personnel) est un site web codé en HTML et CSS. Le style est inspiré des fanzines. Il a pour objectif de mettre en avant des artistes féminines de la scène musicale francophones. Attention, le site n'est pas complétement responsive il vaut mieux le regarder sur un ordinateur.</p>
+        <a href="https://maebarreteau.github.io/musique-au-feminin/">Voir le projet</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-inner">
+      <div class="card-front">
+        Projet 3
+      </div>
+      <div class="card-back">
+        <h3>NEW WAVE : le dégoût d'une généralisation</h3>
+        <p>New Wave (projet perso) est un article/dissertation sur le terme de New Wave dans la musique et particulièrement dans le rap français.</p>
+        <a href="https://maelysbarreteau.wordpress.com/%f0%96%a1%8e-new-wave-le-degout-dune-generalisation/">Voir le projet</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<a href="https://maelysbarreteau.wordpress.com/" style="display:block; text-align:center; margin-top:20px; color:black; text-decoration:none; font-weight:600;">
+<div id="dialogue-box">
+    D'autres projets existent. Pour les voir cliquez sur cette bulle.
+  </div>
+</a>
+
 
   <a href="../index.html" id="character">
     <img src="../images/icone.webp" alt="Guide">
