--- a/pages/creations.html
+++ b/pages/creations.html
@@ -10,7 +10,8 @@
 
 <h1>Mes créations</h1>
 <div id="dialogue-box">
-    Voici quelques-unes de mes créations ! Passez votre souris sur les cartes pour découvrir certains de mes projets.
+    Voici quelques-unes de mes créations en lien avec la musique ! 
+    <br>Passez votre souris sur les cartes pour découvrir certains de mes projets.
   </div>
 
   <div class="cards-container">
