--- a/pages/cv.html
+++ b/pages/cv.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="pages.css">
 </head>
 <body>
-    <h1>Déroule pour voir mon CV !</h1>
+    <h1>Déroulez pour voir mon CV !</h1>
     <img src="../images/cv.png" alt="Mon CV" style="width:100%; max-width:800px; display:block; margin: 20px auto;">
     
     <a href="../index.html" id="character">
