--- a/pages/formations.html
+++ b/pages/formations.html
@@ -18,11 +18,16 @@
             <div class="timeline-content">
                 <h3>Baccalauréat général - mention Bien</h3>
                 <span>2019 - 2022 | Lycée Charles Peguy</span>
-                <p>Seconde : option théâtre, Première : Spécialités HGGSP, SES et Cinéma, Terminal : Spécialités SES et HGGSP. </p>
+                <p>Seconde : option théâtre, Première : Spécialités HGGSP, SES et Cinéma-Audiovisuel, Terminal : Spécialités SES et HGGSP. </p>
                 <p>Mon lycée m'a permis de me discipliner et d'entraîner ma rigueur. 
-                    <br>Durant ces années, j'ai emmagasiné de la culture générale dans différents sujets.</p>
-            </div>
+                    <br>Durant ces années, j'ai emmagasiné de la culture générale dans différents sujets : le français a nourri mon amour pour la lecture (Antigone, Chanson Douce...),
+                    <br>la spécialité Cinéma-Audiovisuel a amélioré ma culture cinématographique (Certains l'aiment chaud, les films de Wes Anderson...) et a amélioré ma capacité 
+                    <br>d'analyse d'images. La spécialité HGGSP m'a permis de comprendre le monde qui m'entoure, de mieux appréhender les relations internationales et les enjeux 
+                    <br>géopolitiques actuels. La spécialité SES m'a permis de comprendre le fonctionnement de l'économie et de la société. J'ai aussi appris à mieux argumenter 
+                    <br>et à développer mon esprit critique. 
+                </p>
         </div>
+    </div>
 
         <div class="timeline-step">
             <div class="timeline-point"></div>
@@ -32,8 +37,11 @@
                 <p>L1 : Mineure sociologie, L2 : Mineure Lettres et Administrations.</p>
                 <p>Cette formation me plaît énormément, j'aime le côté culturel et artistique. 
                     <br>J'apprends beaucoup de choses sur le monde qui m'entoure, particulièrement au niveau de la sociologie et de l'histoire du tourisme qui permet 
-                    <br>de comprendre beaucoup de choses dans nos sociétés actuelles.
-                    <br>J'ai aussi pu développer mes compétences professionnelles à travers mon stage de deuxième année.
+                    <br>de comprendre beaucoup de choses dans nos sociétés actuelles. Je comprends mieux certaines pratiques sociales et culturelles. J'ai étudié 
+                    <br>différents types de cultures. J'ai appris à analyser des oeuvres artistiques de toutes périodes à travers l'UE "Histoire de l'Art". 
+                    <br>J'ai appris à utiliser wordpress et à créer des sites internet dans l'UE "Web", nous avons aussi dû monter un vrai <a href="https://www.canva.com/design/DAGmNsPFG1g/u_WrdYtb_KzF45G1QrZxEA/view?utm_content=DAGmNsPFG1g&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hb7b56b5b6d">cahier des charges.</a> J'ai aussi appris à faire des recherches documentaires et à trier 
+                    <br>mes sources. A travers plusieurs UE j'ai appris à monter des projets culturels et touristiques. En groupe de trois, j'ai pu créer un projet de festival de musique électro (<a href=https://www.canva.com/design/DAGXlVIiEkE/3I8v5YmAHr_0K_0S4er5lw/view?utm_content=DAGXlVIiEkE&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h81da15cf78>TermalSound</a>).
+                    <br>J'ai aussi pu développer mes compétences professionnelles à travers mon stage de deuxième année qui s'est déroulé dans une salle d'expérimentation culturelle : Le Lieu-Dit à Clermont-Ferrand. 
                 </p>
             </div>
         </div>
