--- a/pages/propos.html
+++ b/pages/propos.html
@@ -13,9 +13,12 @@
     Ici vous pouvez en apprendre un peu plus sur moi !
   </div>
 
-<div class=about-me>
+<div class="about-me"> 
+<a href="https://linktr.ee/yocestmae" style="text-decoration:none; color:black;">
+  <img src="../images/photo.jpg" alt="Photo de Maëlys" width="200" style="float:left; margin-right:20px; border-radius:10px;"></a>
   <p>Moi, c'est Maëlys Barreteau. Je suis étudiante en N3 Etudes Culturelles Parcours Tourisme, Culture et Territoire. Avant d'arriver à Clermont-Ferrand, j'ai fait tout un tas de choses, j'ai commencé une licence de Sciences Politique, j'ai travaillé dans plein d'endroits différents... Mais c'est ici que je me sens le mieux, c'est cette filière qui me correspond. J'aime surtout le pan culturel de mes études. C'est pourquoi je voudrais continuer en Master Directions de projets et d'Etablissements Culturels Parcours Action Culturelle et Artistique.</p>
-  <p>Dans la vie, j'aime tout un tas de choses. J'aime le cinéma, coder, dessiner, la musique, l'art en général , les voyages... J'aime principalement apprendre et créer. Depuis que je suis petite j'ai toujours voulu faire un métier passion, je voulais être archéologue parce que j'étais une grande fan d'histoire (et d'Indiana Jones, mais il ne faut pas le dire). Maintenant, j'ai un autre rêve : ouvrir ma propre salle de concert, pouvoir imaginer la programmation et créer des actions de médiations culturelles autour de la musique et principalement de la culture hip-hop. </p>
+  <p>Dans la vie, j'aime tout un tas de choses. J'aime le cinéma, coder, dessiner, la musique, l'art en général, les voyages... J'aime principalement apprendre et créer. Depuis que je suis petite j'ai toujours voulu faire un métier passion, je voulais être archéologue parce que j'étais une grande fan d'histoire (et d'Indiana Jones, mais il ne faut pas le dire). Maintenant, j'ai un autre rêve : ouvrir ma propre salle de concert, pouvoir imaginer la programmation et créer des actions de médiations culturelles autour de la musique et principalement de la culture hip-hop. De plus, j'apprécie m'investir dans la vie associative clermontoise, c'est quelque chose qui m'est venu pendant mon stage de L2 au Lieu-Dit, c'est pourquoi je suis inscrite au journal de la fac ce qui me permet de m'entraîner au niveau rédactionnel. Je suis aussi investie dans CinéFac où je m'occupe plus particulièrement de la communication. C'est aussi quelque chose qui m'intéresse. De manière générale, je suis curieuse et motivée. </p>
+  <p>Si vous voulez me suivre sur d'autres réseaux et suivres mes aventures je vous conseille de cliquer sur ma photo, cela vous redirigera vers mon lien linktree.</p>
 </div>
 
   <a href="../index.html" id="character">
