--- a/pages/formations.html
+++ b/pages/formations.html
@@ -39,7 +39,7 @@
                     <br>J'apprends beaucoup de choses sur le monde qui m'entoure, particulièrement au niveau de la sociologie et de l'histoire du tourisme qui permet 
                     <br>de comprendre beaucoup de choses dans nos sociétés actuelles. Je comprends mieux certaines pratiques sociales et culturelles. J'ai étudié 
                     <br>différents types de cultures. J'ai appris à analyser des oeuvres artistiques de toutes périodes à travers l'UE "Histoire de l'Art". 
-                    <br>J'ai appris à utiliser wordpress et à créer des sites internet dans l'UE "Web", nous avons aussi dû monter un vrai <a href="https://www.canva.com/design/DAGmNsPFG1g/u_WrdYtb_KzF45G1QrZxEA/view?utm_content=DAGmNsPFG1g&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hb7b56b5b6d">cahier des charges.</a> J'ai aussi appris à faire des recherches documentaires et à trier 
+                    <br>J'ai appris à utiliser wordpress et à créer des sites internet dans l'UE "Web", nous avons aussi dû monter un vrai cahier des charges. J'ai aussi appris à faire des recherches documentaires et à trier 
                     <br>mes sources. A travers plusieurs UE j'ai appris à monter des projets culturels et touristiques. En groupe de trois, j'ai pu créer un projet de festival de musique électro (<a href=https://www.canva.com/design/DAGXlVIiEkE/3I8v5YmAHr_0K_0S4er5lw/view?utm_content=DAGXlVIiEkE&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h81da15cf78>TermalSound</a>).
                     <br>J'ai aussi pu développer mes compétences professionnelles à travers mon stage de deuxième année qui s'est déroulé dans une salle d'expérimentation culturelle : Le Lieu-Dit à Clermont-Ferrand. 
                 </p>
