--- a/pages/formations.html
+++ b/pages/formations.html
@@ -34,7 +34,7 @@
             <div class="timeline-content">
                 <h3>Licence Etudes Culturelles; Parcours Tourisme, Culture et Territoire</h3>
                 <span>Depuis 2023 (actuellement en L3) | Université Clermont Auvergne </span>
-                <p>L1 : Mineure sociologie, L2 : Mineure Lettres et Administrations.</p>
+                <p>L1 : Mineure sociologie, L2 : Mineure Lettres et Administration.</p>
                 <p>Cette formation me plaît énormément, j'aime le côté culturel et artistique. 
                     <br>J'apprends beaucoup de choses sur le monde qui m'entoure, particulièrement au niveau de la sociologie et de l'histoire du tourisme qui permet 
                     <br>de comprendre beaucoup de choses dans nos sociétés actuelles. Je comprends mieux certaines pratiques sociales et culturelles. J'ai étudié 
