--- a/pages/experiences.html
+++ b/pages/experiences.html
@@ -21,10 +21,12 @@
   <button class="experience-badge stage" data-content="Stage au Lieu-Dit : Organisation et coordination de la fête de quartier de Saint-Alyre. J'ai fait les courses, créé des jeux, assistés à des réunions sur différents sujets.">Le Lieu-Dit</button>
   <button class="experience-badge assoc" data-content="Engagement à l'AFEV : accompagnement scolaire et ouverture au monde culturel.">AFEV</button>
   <button class="experience-badge assoc" data-content="Membre de CinéFac : association de cinéma de l'UCA. Je suis chargée principalement de la communication. Je m'occupe des réseaux sociaux et du site Wordpress.">CinéFac</button>
-  <button class="experience-badge pro" data-content="Travil aux Galeries Lafayette : conseil client et encaissement d'un corner de maroquinerie.">Galeries Lafayette</button>
+  <button class="experience-badge pro" data-content="Travail aux Galeries Lafayette : conseil client et encaissement d'un corner de maroquinerie.">Galeries Lafayette</button>
   <button class="experience-badge assoc" data-content="Membre de Quoi D'Neuf Gergo ? : rédactions d'articles sur la sphère culturelle à Clermont-Ferrand, critiques sur des objets culturels, interviews de différents acteurs de ce monde.">Quoi D'Neuf Gergo ?</button>
-  
-
+  <button class="experience-badge benevole" data-content="Bénévole au Café Concert des Master DPEC : accueil du public, comptage, et service des repas. Travail en binôme.">Café-concert</button>
+  <button class="experience-badge stage" data-content="Service civique au Lieu-Dit et à mille formes :">Lieu-Dit et mille formes</button>
+  <button class="experience-badge pro" data-content="Travail à la PAG accueil : accueil du public, informations, guidage, lieux de travail : ASM, Clermont Foot 63, salon de l'élevage.">PAG Accueil</button>
+  <button class="experience-badge pro" data-content="Travail à la DRAC du Puy de Dôme : travail en autonomie, accueil des visteurs, gestion des appels et des mails.">DRAC</button>
   
 </div>
 
@@ -35,6 +37,17 @@
     <p id="modal-text"></p>
   </div>
 </div>
+
+<div class="legend">
+  <h4>Légende</h4>
+  <ul>
+    <li><span class="legend-dot pro"></span> Expériences professionnelles</li>
+    <li><span class="legend-dot benevole"></span> Expériences bénévoles</li>
+    <li><span class="legend-dot stage"></span> Stages et service civique</li>
+    <li><span class="legend-dot assoc"></span> Engagements associatifs</li>
+  </ul>
+</div>
+
 
 
     
