--- a/pages/cv.html
+++ b/pages/cv.html
@@ -6,6 +6,7 @@
     <title>MON CV</title>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="pages.css">
+    <link rel="icon" type="image/x-icon" href="../images/icone.webp">
 </head>
 <body>
     <h1>Déroulez pour voir mon CV !</h1>
