--- a/pages/creations.html
+++ b/pages/creations.html
@@ -5,6 +5,7 @@
 <title>MES COMPETENCES</title>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="pages.css">
+<link rel="icon" type="image/x-icon" href="../images/icone.webp">
 </head>
 <body>
 
