--- a/pages/propos.html
+++ b/pages/propos.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Portfolio - Maëlys Barreteau</title>
+<title>A PROPOS</title>
 <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="pages.css">
+<link rel="icon" type="image/x-icon" href="../images/icone.webp">
 </head>
 <body>
 
