--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <a href="pages/propos.html" text-decoration="none" style="display:block; text-align:center; margin-top:20px; color:black; font-weight:600;">
 <div id="dialogue-box">
-    Si tu veux en savoir plus sur moi, clique sur cette bulle.
+    Si vous voulez en savoir plus sur moi, cliquez sur cette bulle.
   </div>
 </a>
 
