--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
 
+  <nav class="navbar">
+  <a href="index.html">Accueil</a>
+  <a href="pages/competences2.html">Compétences</a>
+  <a href="pages/creations.html">Créations</a>
+  <a href="pages/cv.html">CV</a>
+  <a href="pages/formations2.html">Formations</a>
+  <a href="pages/experiences.html">Expériences</a>
+  <a href="pages/interets.html">Centres d'intérêt</a>
+  <a href="pages/propos.html">À propos</a>
+</nav>
 
 <div id="character">
   <img src="images/icone.webp" alt="Guide">
@@ -18,7 +28,7 @@
 </div>
 
 <div id="scrapbook">
-  <a href="pages/competences.html" class="card" style="transform: rotate(-5deg); top:0; left:0;">
+  <a href="pages/competences2.html" class="card" style="transform: rotate(-5deg); top:0; left:0;">
     <img src="images/pokemon1.jpg" alt="Projet 1">
     <div class="label">Mes compétences</div>
   </a>
@@ -33,14 +43,19 @@
     <div class="label">Mon CV</div>
   </a>
 
-  <a href="pages/formations.html" class="card" style="transform: rotate(4deg); top:180px; left:270px;">
+  <a href="pages/formations2.html" class="card" style="transform: rotate(4deg); top:180px; left:270px;">
     <img src="images/pokemon4.jpg" alt="Projet 4">
     <div class="label">Mes formations</div>
   </a>
 
-    <a href="pages/experiences.html" class="card" style="transform: rotate(-3deg); top:180px; left:270px;">
+  <a href="pages/experiences.html" class="card" style="transform: rotate(-3deg); top:180px; left:270px;">
     <img src="images/pokemon5.png" alt="Projet 5">
     <div class="label">Mes expériences</div>
+  </a>
+
+  <a href="pages/interets.html" class="card" style="transform: rotate(3deg); top:180px; left:270px;">
+    <img src="images/pokemon7.jpg" alt="Projet 5">
+    <div class="label">Mes centres d'intérêts</div>
   </a>
 </div>
 
