--- a/pages/creations.html
+++ b/pages/creations.html
@@ -9,6 +9,17 @@
 </head>
 <body>
 
+ <nav class="navbar">
+  <a href="../index.html">Accueil</a>
+  <a href="../pages/competences2.html">Compétences</a>
+  <a href="../pages/creations.html">Créations</a>
+  <a href="../pages/cv.html">CV</a>
+  <a href="../pages/formations2.html">Formations</a>
+  <a href="../pages/experiences.html">Expériences</a>
+  <a href="../pages/interets.html">Centres d'intérêt</a>
+  <a href="../pages/propos.html">À propos</a>
+</nav>
+
 <h1>Mes créations</h1>
 <div id="dialogue-box">
     Voici quelques-unes de mes créations en lien avec la musique ! 
