--- a/pages/competences.html
+++ b/pages/competences.html
@@ -9,6 +9,18 @@
     <link rel="icon" type="image/x-icon" href="../images/icone.webp">
 </head>
 <body>
+
+ <nav class="navbar">
+  <a href="../index.html">Accueil</a>
+  <a href="../pages/competences2.html">Compétences</a>
+  <a href="../pages/creations.html">Créations</a>
+  <a href="../pages/cv.html">CV</a>
+  <a href="../pages/formations.html">Formations</a>
+  <a href="../pages/experiences.html">Expériences</a>
+  <a href="../pages/interets.html">Centres d'intérêt</a>
+  <a href="../pages/propos.html">À propos</a>
+</nav>
+
     <h1>Mes compétences</h1>
     <div id="dialogue-box">
         Vous êtes sur mon arbre de compétences ! N'hésitez pas à cliquer sur les bulles pour en savoir plus.
