--- a/pages/formations.html
+++ b/pages/formations.html
@@ -9,6 +9,18 @@
     <link rel="icon" type="image/x-icon" href="../images/icone.webp">
 </head>
 <body>
+
+<nav class="navbar">
+  <a href="../index.html">Accueil</a>
+  <a href="../pages/competences2.html">Compétences</a>
+  <a href="../pages/creations.html">Créations</a>
+  <a href="../pages/cv.html">CV</a>
+  <a href="../pages/formations.html">Formations</a>
+  <a href="../pages/experiences.html">Expériences</a>
+  <a href="../pages/interets.html">Centres d'intérêt</a>
+  <a href="../pages/propos.html">À propos</a>
+</nav>
+
     <h1>Mes formations</h1>
     <div id="dialogue-box">
         Voici les différentes formations que j'ai suivies.
