--- a/pages/propos.html
+++ b/pages/propos.html
@@ -9,6 +9,17 @@
 </head>
 <body>
 
+  <nav class="navbar">
+  <a href="../index.html">Accueil</a>
+  <a href="../pages/competences2.html">Compétences</a>
+  <a href="../pages/creations.html">Créations</a>
+  <a href="../pages/cv.html">CV</a>
+  <a href="../pages/formations2.html">Formations</a>
+  <a href="../pages/experiences.html">Expériences</a>
+  <a href="../pages/interets.html">Centres d'intérêt</a>
+  <a href="../pages/propos.html">À propos</a>
+</nav>
+
 <h1>A propos</h1>
 <div id="dialogue-box">
     Ici vous pouvez en apprendre un peu plus sur moi !
